# rrule

./: CHANGELOG.md  README.md  mix.exs
.github/workflows/: release.yml
lib/: rrule.ex
native/rrule/: Cargo.toml
native/rrule/src/: lib.rs
test/: rrule_test.exs
