[package]
name = "rrule"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "rrule"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.40"
chrono-tz = "0.10.3"
rustler = { version = "0.36", default-features = false, features = ["derive"] }
rrule = "0.13.0"

[features]
default = ["nif_version_2_16"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
