[package]
name = "rrule"
version = "0.16.6"
authors = []
edition = "2018"

[lib]
name = "rrule"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.40"
chrono-tz = "0.10.3"
rustler = { version = "0.36", default-features = false, features = ["derive"] }
rrule = {git = 'https://github.com/sarge/rust-rrule#a78e6d17a84de8cee31d3b571ef98affd53085e0', features= []}

[features]
default = ["nif_version_2_16"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

