[package]
name = "rrule"
version = "0.16.6"
authors = []
edition = "2018"

[lib]
name = "rrule"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.40"
chrono-tz = "0.10.3"
rustler = { version = "0.36", default-features = false, features = ["derive"] }
rrule = {git = 'https://github.com/sarge/rust-rrule', rev = "85bfc92b61b3a6f880b76376d3766d5cf7bde3e6", features= []}

[features]
default = ["nif_version_2_16"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

